Typo fix from @awoods review

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -917,7 +917,7 @@ DIGEST inventory.json
           <h2>Conformance of prior versions</h2>
           <p>
               Version directories in OCFL are intended to be immutable in that existing version directories do not
-              change when new version directory is added. Each version directory within an OCFL Object
+              change when a new version directory is added. Each version directory within an OCFL Object
               <span id="E103">MUST</span> conform to either the same or a later OCFL specification version as the
               preceding version directory. If inventories are stored in the version directories then the OCFL
               specification version for a given version directory is apparent from the <code>type</code> attribute
