Fix examples in spec (#546)
* Add 'mailto' to example addresses

Related to: https://github.com/OCFL/spec/issues/539

* Add 'user' block to https://ocfl.io/1.0/spec/#example-object-diff-paths

Related to: https://github.com/OCFL/spec/issues/539

Co-authored-by: anw822 <andrew_woods@harvard.edu>

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1155,7 +1155,7 @@ DIGEST inventory.json
         "7545b8...f67": [ "file.txt" ]
       },
       "user": {
-        "address": "alice@example.org",
+        "address": "mailto:alice@example.org",
         "name": "Alice"
       }
     }
@@ -1240,7 +1240,7 @@ DIGEST inventory.json
         "ffccf6...62e": [ "image.tiff" ]
       },
       "user": {
-        "address": "alice@example.com",
+        "address": "mailto:alice@example.com",
         "name": "Alice"
       }
     },
@@ -1252,7 +1252,7 @@ DIGEST inventory.json
         "cf83e1...a3e": [ "empty.txt", "empty2.txt" ]
       },
       "user": {
-        "address": "bob@example.com",
+        "address": "mailto:bob@example.com",
         "name": "Bob"
       }
     },
@@ -1265,7 +1265,7 @@ DIGEST inventory.json
         "ffccf6...62e": [ "image.tiff" ]
       },
       "user": {
-        "address": "cecilia@example.com",
+        "address": "mailto:cecilia@example.com",
         "name": "Cecilia"
       }
     }
@@ -1304,6 +1304,10 @@ DIGEST inventory.json
       "state": {
         "7545b8...f67": [ "a file.wxy" ],
         "af318d...3cd": [ "another file.xyz" ]
+      },
+      "user": {
+        "address": "mailto:admin@example.org",
+        "name": "Some Admin"
       }
     }
   }
@@ -1417,7 +1421,7 @@ myfirstbag
         "f15428...83f": [ "myfirstbag/manifest-md5.txt" ]
       },
       "user": {
-        "address": "someone@example.org",
+        "address": "mailto:someone@example.org",
         "name": "Some One"
       }
     },
@@ -1433,7 +1437,7 @@ myfirstbag
         "b8bdf1...927": [ "myfirstbag/data/27614-h/images/q173.txt" ]
       },
       "user": {
-        "address": "somebody-else@example.org",
+        "address": "mailto:somebody-else@example.org",
         "name": "Somebody Else"
       }
     }
