Address @awoods review comments

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -48,6 +48,22 @@
             wgURI: "https://ocfl.io",
             wgPublicList: "",
             otherLinks: [{
+                key: "Additional Documents",
+                data: [
+                    {
+                        value: "Specification",
+                        href: "https://ocfl.io/draft/spec/",
+                    },
+                    {
+                        value: "Validation Codes",
+                        href: "https://ocfl.io/draft/spec/validation-codes.html",
+                    },
+                    {
+                        value: "Extensions",
+                        href: "https://github.com/OCFL/extensions/",
+                    }
+                ]
+            }, {
                 key: "Previous version",
                 data: [
                     {
