--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -65,8 +65,8 @@
                 key: "Additional Documents",
                 data: [
                     {
-                        value: "Implementation Notes",
-                        href: "https://ocfl.io/1.0/implementation-notes/",
+                        value: "Specification",
+                        href: "https://ocfl.io/1.0/spec/",
                     },
                     {
                         value: "Validation Codes",
