Address @awoods review comments

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -54,6 +54,22 @@
             wgURI: "https://ocfl.io",
             wgPublicList: "",
             otherLinks: [{
+                key: "Additional Documents",
+                data: [
+                    {
+                        value: "Implementation Notes",
+                        href: "https://ocfl.io/draft/implementation-notes/",
+                    },
+                    {
+                        value: "Validation Codes",
+                        href: "https://ocfl.io/draft/spec/validation-codes.html",
+                    },
+                    {
+                        value: "Extensions",
+                        href: "https://github.com/OCFL/extensions/",
+                    }
+                ]
+            }, {
                 key: "Previous version",
                 data: [
                     {
