--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -672,14 +672,15 @@
         <section id="manifest">
             <h2>Manifest</h2>
             <p>
-                The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
-                of every content file in the current and previous versions of the <a>OCFL Object</a>. The value for
-                each key <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files in the
-                OCFL Object that have content with the given digest. As JSON keys are case sensitive, while digests may
-                not be, there is an additional requirement that each digest value <span id="E096">MUST</span> occur
-                only once in the manifest regardless of case. Content paths within a manifest block
-                <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>. The following restrictions
-                avoid ambiguity and provide path safety for clients processing the <code>manifest</code>.
+                The value of the <code>manifest</code> key <span id="E106">MUST</span> be a JSON object, and each key
+                <span id="E107">MUST</span> correspond to a digest value key found in one or more <code>state</code>
+                JSON objects of the current and/or previous <code>version</code> blocks of the <a>OCFL Object</a>. The
+                value for each key <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files
+                in the OCFL Object that have content with the given digest. As JSON keys are case sensitive, while
+                digests may not be, there is an additional requirement that each digest value
+                <span id="E096">MUST</span> occur only once in the manifest regardless of case. Content paths within a
+                manifest block <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>. The following
+                restrictions avoid ambiguity and provide path safety for clients processing the <code>manifest</code>.
             </p>
             <ul>
                 <li>The content path <span id="E098">MUST</span> be interpreted as a set of one or more
