Fix reference to state blocks

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -674,7 +674,7 @@
             <p>
                 The value of the <code>manifest</code> key <span id="E106">MUST</span> be a JSON object, and each key
                 <span id="E107">MUST</span> correspond to a digest value key found in one or more <code>state</code>
-                JSON objects of the current and/or previous <code>version</code> blocks of the <a>OCFL Object</a>. The
+                blocks of the current and/or previous <code>version</code> blocks of the <a>OCFL Object</a>. The
                 value for each key <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files
                 in the OCFL Object that have content with the given digest. As JSON keys are case sensitive, while
                 digests may not be, there is an additional requirement that each digest value
