--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -490,6 +490,8 @@
               otherwise. The name of this designated sub-directory MAY be defined in the
               <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code> with the value being
               the chosen sub-directory name as a string, relative to the version directory. The
+              <code>contentDirectory</code> value <span id="E0108">MUST</span> represent a direct child directory of the
+              version directory in which it is found. As such, the
               <code>contentDirectory</code> value <span id="E017">MUST NOT</span> contain the forward slash
               (<code>/</code>) path separator and <span id="E018">MUST NOT</span> be either one or two periods
               (<code>.</code> or <code>..</code>). If the key <code>contentDirectory</code> is set, it
