--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -630,8 +630,9 @@
                 <dt><code>id</code></dt>
                 <dd>
                     A unique identifier for the OCFL Object. This <span id="E037">MUST</span> be unique in the local
-                    context, <span id="E110">MUST NOT</span> change between versions of the same object, and <span id="W005">SHOULD</span> be a URI [[!RFC3986]]. There is no expectation that a
-                    URI used is resolvable. For example, URNs [[RFC8141]] MAY be used.
+                    context, <span id="E110">MUST NOT</span> change between versions of the same object, and <span 
+                    id="W005">SHOULD</span> be a URI [[!RFC3986]]. There is no expectation that a URI used is 
+                    resolvable. For example, URNs [[RFC8141]] MAY be used.
                 </dd>
                 <dt><code>type</code></dt>
                 <dd>
