--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -911,9 +911,10 @@ DIGEST inventory.json
             all content for versions up to and including that particular version. In the case when no files have been
             added or updated in a given version, resulting in an empty and therefore absent 
             <a href="#content-directory">"content" directory</a>, the version directory <span id="E109">MUST</span>
-            include an inventory file. Where an OCFL Object contains <code>inventory.json</code> in version directories,
-            the inventory file in the OCFL Object Root <span id="E064">MUST</span> be the same as the file in the most
-            recent version. See also requirements for the corresponding <a href="#inventory-digest">Inventory Digest</a>.
+            include an inventory file. Where an OCFL Object contains <code>inventory.json</code> in version 
+            directories, the inventory file in the OCFL Object Root <span id="E064">MUST</span> be the same as the
+            file in the most recent version. See also requirements for the corresponding 
+            <a href="#inventory-digest">Inventory Digest</a>.
         </p>
         <p>
             In the case that prior version directories include an inventory file there will be multiple inventory
