--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -839,12 +839,13 @@
             <p>
                 An OCFL Object inventory MAY include a block for storing additional fixity information to supplement the
                 complete set of digests in the <a href="#manifest">Manifest</a>, for example to support legacy digests
-                from a content migration. This block <span id="E055">MUST</span> have the key of <code>fixity</code>
-                within the inventory.
+                from a content migration. If present, this block <span id="E055">MUST</span> have the key
+                of <code>fixity</code> within the inventory, and its value <span id="E111">MUST</a> be a non-empty JSON
+                object.
             </p>
             <p>
-                The <code>fixity</code> block <span id="E056">MUST</span> contain keys corresponding to the controlled
-                vocabulary given in the <a href="#digest-algorithms">digest algorithms</a> listed in the
+                The keys within the <code>fixity</code> block <span id="E056">MUST</span> correspond to the controlled
+                vocabulary of <a href="#digest-algorithms">digest algorithm names</a> listed in the
                 <a href="#digests">Digests</a> section, or in a table given in an <a>Extension</a>. The value of the
                 fixity block for a particular digest algorithm <span id="E057">MUST</span> follow the structure of the
                 <a href="#manifest"><code>manifest</code></a> block; that is, a key corresponding to the digest value,
