--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -840,8 +840,8 @@
                 An OCFL Object inventory MAY include a block for storing additional fixity information to supplement the
                 complete set of digests in the <a href="#manifest">Manifest</a>, for example to support legacy digests
                 from a content migration. If present, this block <span id="E055">MUST</span> have the key
-                of <code>fixity</code> within the inventory, and its value <span id="E111">MUST</a> be a non-empty JSON
-                object.
+                of <code>fixity</code> within the inventory, and its value <span id="E111">MUST</span> be a non-empty
+                JSON object.
             </p>
             <p>
                 The keys within the <code>fixity</code> block <span id="E056">MUST</span> correspond to the controlled
