--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1105,10 +1105,32 @@ DIGEST inventory.json
         </p>
         <p>
             The base directory of an OCFL Storage Root MAY contain a directory named <code>extensions</code> for the
-            purposes of extending the functionality of an OCFL Storage Root. The storage root <code>extensions</code>
-            directory <span id="E086">MUST</span> conform to the same guidelines and limitations as those defined for
+            purposes of extending the functionality of an OCFL Storage Root. The guidelines and limitations for the
+            storage root <code>extensions</code> directory are defined in alignment with those of the
             <a href="#object-extensions">object extensions</a>.
         </p>
+        <p>
+            The <code>extensions</code> directory <span id="E112">MUST NOT</span> contain any files, and no
+            sub-directories other than extension sub-directories. Extension sub-directories
+            <span id="W016">SHOULD</span> be named according to a <a>registered extension name</a>. The specific
+            structure and function of the extension, as well as a declaration of the registered extension name
+            <span id="E113">MUST</span> be defined in one of the following locations:
+        </p>
+        <ul>
+          <li>
+            The <a href="https://ocfl.github.io/extensions/">OCFL Extensions repository</a>
+          </li>
+          <li>
+            The Storage Root, as a plain text document directly in the Storage Root
+          </li>
+        </ul>
+        <blockquote class="informative">
+          <p>
+            Non-normative note: Extension sub-directories should use the same name as a registered extension
+            in order to both avoid the possiblity of an extension sub-directory colliding with the name of another
+            registered extension as well as to facilitate the recognition of extensions by OCFL clients.
+          </p>
+        </blockquote>
         <blockquote class="informative">
             <p>
                 Non-normative note: Storage extensions can be used to support additional features, such as providing
