--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -293,7 +293,7 @@
         <dd>
             Extensions are used to collaborate, review, and publish additional non-normative functions related to OCFL.
             Extensions are intended to be informational and cite-able, but outside the scope of the normal specification
-            process. Existing extensions may be found in the <a href="https://ocfl.github.io/extensions/">OCFL
+            process. Registered extensions may be found in the <a href="https://ocfl.github.io/extensions/">OCFL
             Extensions repository.</a>
         </dd>
         <dt>
@@ -362,7 +362,7 @@
         </dt>
         <dd>
             The registered name of an extension is the name provided in the <i>Extension Name</i> property of the
-            extension's definition.
+            extension's definition in the <a href="https://ocfl.github.io/extensions/">OCFL Extensions repository</a>.
         </dd>
     </dl>
 </section>
@@ -975,23 +975,15 @@ DIGEST inventory.json
             of extending the functionality of an OCFL Object. The <code>extensions</code> directory
             <span id="E067">MUST NOT</span> contain any files, and no sub-directories other than extension
             sub-directories. Extension sub-directories <span id="W013">SHOULD</span> be named according to a
-            <a>registered extension name</a>. The specific structure and function of the extension, as well as a
-            declaration of the registered extension name <span id="E068">MUST</span> be defined in one of the following
-            locations:
+            <a>registered extension name</a> in the <a href="https://ocfl.github.io/extensions/">OCFL Extensions
+            repository</a>.
         </p>
-        <ul>
-          <li>
-            The <a href="https://ocfl.github.io/extensions/">OCFL Extensions repository</a>
-          </li>
-          <li>
-            The Storage Root, as a plain text document directly in the Storage Root
-          </li>
-        </ul>
         <blockquote class="informative">
           <p>
             Non-normative note: Extension sub-directories should use the same name as a registered extension
             in order to both avoid the possiblity of an extension sub-directory colliding with the name of another
-            registered extension as well as to facilitate the recognition of extensions by OCFL clients.
+            registered extension as well as to facilitate the recognition of extensions by OCFL clients. See
+            also <a href="#documenting-local-extensions">Documenting Local Extensions</a>.
           </p>
         </blockquote>
     </section>
@@ -1011,8 +1003,8 @@ DIGEST inventory.json
         </p>
         <p>
           An OCFL Storage Root MAY contain other files as direct children. These might include a human-readable
-          copy of the OCFL specification to make the storage root self-documenting, or files used by
-          <a href="#storage-root-extensions">storage root extensions</a>. An OCFL validator
+          copy of the OCFL specification to make the storage root self-documenting, or files used to
+          <a href="#documenting-local-extensions">document local extensions</a>. An OCFL validator
           <span id="E087">MUST</span> ignore any files in the storage root it does not understand.
         </p>
         <p>
@@ -1116,6 +1108,17 @@ DIGEST inventory.json
                 nature of the storage root.
             </p>
         </blockquote>
+    </section>
+
+    <section id="documenting-local-extensions">
+        <h2>Documenting Local Extensions</h2>
+        <p>
+            It is preferable that both <a href="#object-extensions">Object Extensions</a> and
+            <a href="#storage-root-extensions">Storage Root Extenstions</a> are documented and registered
+            in the <a href="https://ocfl.github.io/extensions/">OCFL Extensions repository</a>. However,
+            local extensions MAY be documented by including a plain text document directly in the storage root,
+            thus making the storage root self-documenting.
+        <p>
     </section>
 
     <section id="filesystem-features">
