Add link on OCFL Object Root

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -438,7 +438,7 @@
         <p>
             The OCFL specification version declaration <span id="E002">MUST</span> be formatted according to the
             [[!NAMASTE]] specification. There <span id="E003">MUST</span> be exactly one version declaration file in
-            the base directory of the OCFL Object Root giving the OCFL version in the filename.
+            the base directory of the <a>OCFL Object Root</a> giving the OCFL version in the filename.
             The filename <span id="E004">MUST</span> conform to the pattern
             <code>T=dvalue</code>, where <code>T</code> <span id="E005">MUST</span> be 0, and <code>dvalue</code>
             <span id="E006">MUST</span> be <code>ocfl_object_</code>, followed by the OCFL specification version
