--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1052,7 +1052,7 @@ DIGEST inventory.json
         <h2>Root Conformance Declaration</h2>
         <p>
           The OCFL version declaration <span id="E075">MUST</span> be formatted according to the [[!NAMASTE]]
-          specification. There <span id="E076">MUST</span> be exaclty one version declaration file in the base
+          specification. There <span id="E076">MUST</span> be exactly one version declaration file in the base
           directory of the <a>OCFL Storage Root</a> giving the OCFL version in the filename.
           The filename <span id="E077">MUST</span> conform to the pattern
           <code>T=dvalue</code>, where <code>T</code> <span id="E078">MUST</span> be 0, and <code>dvalue</code>
