Fix bagit links to RFC

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -108,7 +108,7 @@
             localBiblio: {
                 "BagIt": {
                     title: "The BagIt File Packaging Format (V1.0)",
-                    href: "https://tools.ietf.org/html/draft-kunze-bagit-17",
+                    href: "https://datatracker.ietf.org/doc/html/rfc8493",
                     authors: [
                         "J. Kunze",
                         "J. Littman",
@@ -1356,7 +1356,7 @@ DIGEST inventory.json
             content versioning. Using the OCFL it is possible to store a BagIt structure with content versioning, such
             that when the <a>logical state</a> is resolved, it creates a valid BagIt 'bag'. This example will
             illustrate one way this can be accomplished, using the
-            <a href="https://tools.ietf.org/html/draft-kunze-bagit-17#section-4.1"> example of a basic bag</a> given in
+            <a href="https://datatracker.ietf.org/doc/html/rfc8493#section-4.1"> example of a basic bag</a> given in
             the BagIt specification.
         </p>
 <pre>
