Add formerEditor: Andrew Hankinson

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -43,6 +43,16 @@
                     companyURL: "https://library.harvard.edu/"
                 }
             ],
+            formerEditors: [
+              {
+                name: "Andrew Hankinson",
+                company: "RISM Digital Center",
+                companyURL: "https://rism.digital/",
+                orcid: "0000-0003-2663-0003",
+                w3cid: "81527",
+                retiredDate: "2020-08-31",
+              },
+            ],
             edDraftURI: "https://ocfl.io/draft/spec/",
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
