Close meta elements

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Implementation Notes, Oxford Common File Layout Specification</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Client Behaviours, Oxford Common File Layout Specification">
+    <meta charset="utf-8"/>
+    <meta name="description" content="Client Behaviours, Oxford Common File Layout Specification"/>
     <script src="../respec-w3c-common.js"
             async class="remove"></script>
     <script class="remove">
